--- a/src/components/list-page/linked-list.module.css
+++ b/src/components/list-page/linked-list.module.css
@@ -50,8 +50,17 @@
 }
 
 .list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
   display: flex;
   margin: 90px auto 0 auto;
   justify-content: center;
   gap: 16px;
+}
+
+.listitem {
+  display: flex;
+  gap: 16px;
+  align-items: center;
 }
